# ERPNext

./: .env.example  .gitignore  ERPNext.sln  README.md  docs.md
apps/pharma_vn/: README.md  package.json  pyproject.toml  tsconfig.json
apps/pharma_vn/pharma_vn/: customer_naming.py  hooks.py  install.py  modules.txt
apps/pharma_vn/pharma_vn/access_control/: __init__.py  service.py  setup.py
apps/pharma_vn/pharma_vn/ai_assistant/: __init__.py  config.py  copilot.py  service.py
apps/pharma_vn/pharma_vn/api/: access_control.py  ai_assistant.py  compliance.py  desk_dashboard.py  document_flow.py  dynamic_forms.py  form_extensions.py  hrm.py  integrations.py  operations_control.py  orders.py  payments.py  payroll.py  quality.py  risk.py  stock.py  taxes.py  warehouse_layout.py
apps/pharma_vn/pharma_vn/automation/: delivery_note.py  next_documents.py  purchase_receipt.py  sales_invoice.py  sales_order.py  scheduler.py  transaction_taxes.py
apps/pharma_vn/pharma_vn/config/: desktop.py
apps/pharma_vn/pharma_vn/desktop_icon/: hrm.json  warehouse_layout_2d.json
apps/pharma_vn/pharma_vn/dynamic_forms/: __init__.py  extension_service.py  service.py
apps/pharma_vn/pharma_vn/hrm/: __init__.py  payroll.py  service.py
apps/pharma_vn/pharma_vn/overrides/: __init__.py  customer.py
apps/pharma_vn/pharma_vn/risk_assessment/: service.py
apps/pharma_vn/pharma_vn/services/: __init__.py  alerts.py  capa.py  compliance.py  quality.py  state_machine.py  traceability.py
apps/pharma_vn/pharma_vn/setup/: bootstrap_demo.py  (+9 more)
apps/pharma_vn/scripts/: build-risk-widget.mjs
(+243 files in other folders)
